Fix drag and drop on mobile.

--- a/static/css/thing.css
+++ b/static/css/thing.css
@@ -445,6 +445,9 @@
 }
 
 [draggable] {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
   user-select: none;
   cursor: grab;
 }
